# multipath

./: .gitignore  README.md  analyze_dataset.ipynb  daf  make_graph.ipynb
client/: CMakeLists.txt  client.cpp  client.py  client2.cpp  client_feedback.cpp  client_hw.cpp  config.h  config.py  turn_rest_util.h
cpp/: README.md
cpp/client/: CMakeLists.txt  client.cpp  config.h
cpp/evaluation/: packets_log.csv
cpp/logs/: packets_log.csv
cpp/post_processing/: CMakeLists.txt  config.h  legacy_make_frames.cpp  make_frames.cpp  make_frames_with_decoding_latency.cpp  postprocessing.ipynb  run.sh
cpp/server/: CMakeLists.txt  config.h  receive.cpp  server.cpp  server_play.cpp
cpp/server/logs/: kt_log.csv  lg_log.csv
cpp/server/results/raw/2024-09-11_17-44/logs/: kt_log.csv  lg_log.csv
cpp/server/results/raw/2024-09-11_17-54/logs/: kt_log.csv  lg_log.csv
data/: server_logs.csv
logs/: packets_log.csv
python/: README.md
python/client/: client.py  client_multiprocess.py  config.py
python/logs/: analysis.py  covered_by_other_interface.csv  covered_by_other_interface_2.csv  interfaces.txt  latency_exceeded_1.csv  latency_exceeded_2.csv  missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  packets_log.csv  significant_latency_diff.csv  total_loss.txt
python/results/: interfaces.txt
python/results/0724_1730/: interfaces.txt  missing_1.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/0725_1610/: missing_1.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/0725_1616/: missing_1.csv  missing_sequence_numbers_2.csv
python/results/0725_1627/: interfaces.txt  missing_2.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/0725_1845/: missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  packets_log.csv  significant_latency_diff.csv
python/results/0729_1335/: missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv
python/results/0729_1351/: interfaces.txt  missing_sequence_numbers_1.csv
python/results/0729_1502/: missing_1.csv  missing_2.csv  missing_sequence_numbers_2.csv
python/results/0729_1518/: interfaces.txt  missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv
python/results/0729_1548/: interfaces.txt  missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  packets_log.csv
python/results/0729_1556/: missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/0729_1714/: interfaces.txt  missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/0729_1720/: missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/0729_1731/: interfaces.txt  missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/0729_1737/: missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv
python/results/0729_1745/: missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv
python/results/0729_1750/: missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/0729_1756/: interfaces.txt  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/results/Legacy/: README.txt
python/results/Legacy/0724_1730/: missing_sequence_numbers_1.csv
python/results/Legacy/0725_1610/: missing_2.csv
python/results/Legacy/0725_1616/: missing_2.csv  missing_sequence_numbers_1.csv  significant_latency_diff.csv
python/results/Legacy/0725_1627/: missing_1.csv  missing_sequence_numbers_1.csv
python/results/Legacy/0725_1632/: interfaces.txt  missing_1.csv  significant_latency_diff.csv
python/results/Legacy/0729_1329/: interfaces.txt  missing_1.csv  missing_2.csv  missing_sequence_numbers_1.csv  missing_sequence_numbers_2.csv  packets_log.csv  significant_latency_diff.csv
python/results/Legacy/0729_1335/: missing_1.csv  significant_latency_diff.csv
python/results/Legacy/0729_1351/: missing_1.csv  missing_sequence_numbers_2.csv  significant_latency_diff.csv
python/server/: config.py  server.py
rl/: Abalation study.xlsx  CMakeLists.txt  README.md  analyze.py  environment.yml  evaluation_baseline.py  evaluation_results.csv  get_ssim.py  main.py  requirements.txt  test_encoder_decoder.py
rl/agents/: agent.py  base_agent.py  dqn_agent.py  ppo_agent.py  ppo_agent_vector.py  rdqn_agent.py
rl/codec_module/: CMakeLists.txt  bindings.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  h264_encoder.py
rl/configs/: config.yaml
rl/environment/: env.py  env_delayed_feedback.py  env_legacy.py  env_re.py
rl/evaluation/: evaluation.ipynb  evaluation_baseline.py  evaluation_heuristic.py  evaluation_rl.ipynb  evaluation_rl_baseline.ipynb  evaluation_rl_training.ipynb
rl/models/: dqn_models.py  ppo_models.py  ppo_models_vector.py  rdqn_model.py
rl/train/: evaluate.py  evaluate_ppo.py  model.py  train.py  train_dqn.py  train_ppo.py  train_rdqn.py  training_loop.py
rl/utils/: config.py  directory_manager.py  logger.py
server/: CMakeLists.txt  config.h  config.py  frequency_analyze.py  frequency_analyze_v2.py  server.cpp  server.py  server2.cpp  server_feedback.cpp  server_legacy.cpp
